<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/md_margin_padding_size_small"
    app:elevation="@dimen/md_margin_padding_size_micro">

    <ImageView
        android:id="@+id/ivErrorIndicator"
        android:layout_width="@dimen/dimen_error_image"
        android:layout_height="@dimen/dimen_170dp"
        android:contentDescription="@string/error_something_went_wrong"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_error_indicator"
        app:layout_constraintBottom_toTopOf="@+id/lookUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".4" />

    <TextView
        android:id="@+id/tvErrorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/error_something_went_wrong"
        android:textSize="@dimen/md_text_size_large"
        android:fontFamily="@font/gilroy_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivErrorIndicator" />

    <TextView
        android:id="@+id/tvErrorSubTitle"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:paddingStart="@dimen/md_margin_padding_size_medium"
        android:fontFamily="@font/gilroy_medium"
        android:paddingEnd="@dimen/md_margin_padding_size_medium"
        android:textColor="@color/text_1"
        android:text="@string/info_gamification_message"
        android:textSize="@dimen/dimen_13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorTitle"
        android:layout_height="wrap_content" />

   <!-- <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/lookUpButton"
        android:layout_width="match_parent"
        android:minHeight="@dimen/dimen_40dp"
        android:maxHeight="@dimen/dimen_40dp"
        android:layout_height="@dimen/dimen_40dp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginVertical="@dimen/dimen_16dp"
        android:fontFamily="@font/gilroy_semibold"
        android:textAllCaps="false"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/color_primary_light"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/action_retry" />-->



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/lookUpButton"
        android:layout_width="match_parent"
        android:minHeight="@dimen/dimen_40dp"
        android:maxHeight="@dimen/dimen_40dp"
        android:layout_height="@dimen/dimen_40dp"
        android:background="@drawable/button_background_exo"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginVertical="@dimen/dimen_16dp"
        android:fontFamily="@font/gilroy_semibold"
        android:textAllCaps="false"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/action_retry" />

</androidx.constraintlayout.widget.ConstraintLayout>