<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_results_layout"
    android:layout_width="match_parent"
    android:background="@color/grey_bg6"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lay_toolbar_weather"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/back_ImageView_aboutus"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_weight="0.15"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="@dimen/dimen_10dp"
            android:src="@drawable/red_left_arrow" />

        <TextView
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.63"
            android:fontFamily="@font/gilroy_semibold"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/weather_title"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_22sp" />


    </LinearLayout>


    <!--<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRepoRefresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">-->

    <TextView
        android:id="@+id/loading_msgs_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_25dp"
        android:layout_marginEnd="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:fontFamily="@font/gilroy_semibold"
        android:lines="2"
        android:textColor="@color/text_color"
        android:textSize="@dimen/dimen_15sp"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/lay_toolbar_weather"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress_lay"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@id/loading_msgs_tv"
        android:orientation="vertical">


    <ProgressBar
        android:id="@+id/temp_prgoress_bar"
        style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="@dimen/dimen_25dp"
        android:minHeight="@dimen/dimen_20dp"
        android:progressDrawable="@drawable/custom_progressbar"
        android:visibility="visible"
        android:layout_margin="@dimen/dimen_20dp"
        />

    <Button
        android:id="@+id/start_progress_btn"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:minHeight="@dimen/dimen_40dp"
        android:maxHeight="@dimen/dimen_40dp"
        android:layout_height="@dimen/dimen_40dp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginVertical="@dimen/dimen_16dp"
        android:fontFamily="@font/gilroy_semibold"
        android:textAllCaps="false"
        android:visibility="gone"
        android:textSize="@dimen/dimen_16sp"
        app:rippleColor="@color/white"
        android:text="@string/action_retry" />
    </LinearLayout>



    <RelativeLayout
        android:id="@+id/cities_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_lay">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="5"
            android:visibility="gone"
            tools:listitem="@layout/item_weather" />


        <include
            layout="@layout/layout_status_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <include
            android:id="@+id/layoutError"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_450dp"
            layout="@layout/layout_error_status_notifier"
            android:visibility="gone" />



    </RelativeLayout>

    <TextView
        android:id="@+id/loading_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_25dp"
        android:layout_marginEnd="@dimen/dimen_25dp"
        android:fontFamily="@font/gilroy_semibold"
        android:maxLines="1"
        android:text=""
        tools:text="@string/pourcent"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_18sp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>